<resources>
    <string name="app_name">G-one</string>
    <string name="app_name_navbar"> </string>

    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_sign_up">Daftar</string>
    <string name="action_notyet_accout">Belum punya akun? Daftar</string>
    <string name="action_already_accout">Sudah punya akun? Masuk</string>
    <string name="action_sign_in_short">Masuk</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="name">BPBD Denpasar 1</string>
    <string name="mulai_text">MULAI</string>
    <string name="yakin_text">Yakin</string>
    <string name="time">04.00</string>
    <string name="title_card">Pertolongan Pertama</string>
    <string name="gambar_pertolongan">Gambar Pertolongan Pertama</string>

    <string name="text_hasil">Hasil</string>
    <string name="text_kondisi">Kondisi</string>
    <string name="text_respon">Respon</string>
    <string name="text_aksi">Aksi</string>
    <string name="text_respon_input">Respon korban</string>
    <string name="text_kondisi_input">Kondisi korban</string>


    <string name="button_send">Simpan</string>

    <string name="traumaName">Nama Cedera/Penyakit</string>
    <string name="value_hasil">20/80</string>
    <string name="value_groupName">BPBD Denpasar 1</string>
    <string name="value_respon">Normal</string>
    <string name="value_location">Baypass Ida Bagus Mantra</string>
    <string name="value_kondisi">Sadar</string>
    <string name="value_aksi">Pemberian oksigen</string>
    <string name="value_traumaName">Patah Tulang</string>
    <string name="value_distance">15 Km</string>
    <string name="value_rcmFaskes">RSUP Sanglah</string>
    <string name="value_rcmClass">Kelas A</string>
    <string name="value_historyTime">Senin, 10 Juni 2018 - 10:06</string>
    <string name="perlakuan">Cek Tensi</string>
    <string name="value_tindakan">Cek Tensi</string>
    <string name="value_email">bpbddenpasa1@gmail.com</string>
    <string name="value_noHp">08553300000</string>
    <string name="value_percent">70%</string>
    <string name="history_title">History</string>
    <string name="search_hint">Cari tindakan</string>


    <string name="hint_groupName">Nama kelompok</string>
    <string name="hint_noHp">Nomor handphone</string>
    <string name="hint_email">Email</string>


    <string name="btn_cekKesadaran">Periksa Kesadaran</string>
    <string name="btn_cekPernafasan">Periksa Pernafasan</string>
    <string name="btn_cekTensi">Cek Tensi</string>
    <string name="btn_pasangInfus">Pemasangan Infus</string>
    <string name="btn_additional">Catatan Tambahan</string>
    <string name="btn_cekLuka">Periksa Cidera/Luka</string>
    <string name="btn_done">Sudah</string>
    <string name="btn_notyet">Belum</string>
    <string name="btn_finish">Selesai</string>

    <string name="text_groupName">Nama Kelompok</string>
    <string name="text_email">Email</string>
    <string name="text_noHp">No. HP</string>
    <string name="text_login">Masuk untuk mulai melakukan pertolongan</string>
    <string name="text_signup">Daftar untuk mulai melakukan pertolongan</string>
    <string name="text_cekKesadaran">Hasil pemeriksaan akan dikalkulasikan untuk mengetahui skor GCS korban</string>
    <string name="text_cekTensi">Hasil cek tensi akan direkam ke dalam rekam medis</string>
    <string name="text_systole">Masukan Systole</string>
    <string name="text_diastole">Masukan Distole</string>
    <string name="kondisiKorban">Masukan kondisi korban</string>
    <string name="kondisiLainnya">Masukan kondisi lainnya</string>
    <string name="text_additionalNote">Masukan kondisi lainnya, seperti penyakit bawaan </string>
    <string name="text_pasangInfus">Waktu pesangan infus akan direkam dalam rekam medis korban</string>
    <string name="text_done">Apakah semua tindakan sudah selesai?</string>
    <string name="text_sub_done">Semua data akan disimpan dan prediksi trauma/penyakit akan ditunjukan</string>
    <string name="text_cekPernafasan">Masukan hasil pengecekan dan bantuan pernafasan yang diberikan</string>
    <string name="text_cekLuka">Pilih dan masukan cidera korban kemudian tekan simpan</string>

    <string name="muali_penanganan">Mulai Penanganan</string>
    <string name="pilih_tindakan">PILIH TINDAKAN</string>
    <string name="pertama">Pertama!</string>
    <string name="belum_disimpan">Informasi belum disimpan</string>
    <string name="belum_disimpan_isi">Ada informasi yang belum disimpan. Anda yakin ingin keluar?</string>
    <string name="isi_text_pertama">Foto posisi korban sebelum dilakukan pertolongan.</string>
    <string name="foto_posisi">Foto Posisi Awal korban di lokasi.</string>
    <string name="mulai_foto">Mulai Foto</string>
    <string name="title_activity_chat_field">Lembar catatan penderita</string>
    <string name="title_activity_list_actions">Daftar Tindakan</string>

    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="prompt_injury">Pilih cidera</string>
    <string name="prompt_additional_injury">Masukan kondisi lainnya</string>
    <string name="prompt_injury_optional">Cidera tambahan (opsional)</string>

    <!-- Respiration check items -->
    <string-array name="checking_result_items">
        <item>Hasil Pemeriksaan</item>
        <item>Tersumbat benda asing/cairan</item>
        <item>Nafas Tersendat/Tidak Lancar</item>
        <item>Seluran Nafasan Normal</item>
    </string-array>

    <string-array name="nurse_actions_items">
        <item>Bantuan pernafasan yang diberikan</item>
        <item>Resutasi Jantung Paru (RJP)</item>
        <item>Pemberian Oksigen</item>
        <item>Membuka saluran nafas</item>
        <item>Membuka saluran nafas dan RJP</item>
    </string-array>

    <string-array name="patient_response_items">
        <item>Respon pasien setelah bantuan</item>
        <item>Pernafasan berangsur nomal</item>
        <item>Pernafasan masih terganggu</item>
    </string-array>

    <!-- Conscious check items -->
    <string-array name="eye_responses">
        <item>Bagaimana respon mata korban?</item>
        <item>Tidak ada respon mata</item>
        <item>Bereaksi saat rangsang nyeri</item>
        <item>Beraksi saat diperintah buka mata</item>
        <item>Mata terbuka normal tanpa rangsangan dan perintah</item>
    </string-array>

    <string-array name="voice_response">
        <item>Bagaimana respon suara korban?</item>
        <item>Tidak ada respon suara</item>
        <item>Hanya merintih</item>
        <item>Berkomunikasi dengan tidak jelas</item>
        <item>Komunikasi baik, kebingungan</item>
        <item>Komunikasi lancar</item>
    </string-array>
    <string-array name="movement_response">
        <item>Bagaimana respon gerak korban?</item>
        <item>Tidak ada respon gerakan</item>
        <item>Hanya dapat menggerakan jari tangan dan kaki</item>
        <item>Hanya menekuk lengan dan memutar bahu</item>
        <item>Dapat menggerakkan tubuh menjauhi sumber nyeri</item>
        <item>Dapat menunjukan lokasi nyeri</item>
        <item>Bergerak normal</item>
    </string-array>

    <string-array name="injury_items">
        <item>Patah tulang</item>
        <item>Bengkak/memar</item>
        <item>Luka lecet</item>
        <item>Sakit saat berjalan</item>
        <item>Pendarahan di kepala</item>
        <item>Lengan kanan berdarah</item>
        <item>Lengan kiri berdarah</item>
        <item>Kaki kanan berdarah</item>
        <item>Kaki kiri berdarah</item>
        <item>Punggung terluka</item>
    </string-array>

    <string-array name="additional_injury_items">
        <item>Bengkak/memar</item>
        <item>Kesulitan berjalan</item>
        <item>Sakit saat berjalan</item>
        <item>Kelemahan salah satu sisi tubuh</item>
    </string-array>
</resources>