<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chatList"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginHorizontal="5dp"
    android:background="@drawable/chat_bg"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/title_chat"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="@drawable/title_chat_bg"
        android:fontFamily="@font/opensansbold"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/title_card"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/opensansreguler"
        android:text="@string/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_kondisi" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_chat">

        <ImageView
            android:id="@+id/docPicture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_launcher_background"
            android:contentDescription="@string/gambar_pertolongan" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_hasil"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/value_hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/value_hasil"
        app:layout_constraintBottom_toBottomOf="@+id/text_hasil"
        app:layout_constraintStart_toEndOf="@+id/text_hasil" />

    <TextView
        android:id="@+id/text_respon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_respon"
        app:layout_constraintStart_toStartOf="@+id/text_hasil"
        app:layout_constraintTop_toBottomOf="@+id/text_hasil" />

    <TextView
        android:id="@+id/value_respon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/value_respon"
        app:layout_constraintBottom_toBottomOf="@+id/text_respon"
        app:layout_constraintStart_toEndOf="@+id/text_respon" />

    <TextView
        android:id="@+id/text_kondisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_kondisi"
        app:layout_constraintStart_toStartOf="@+id/text_respon"
        app:layout_constraintTop_toBottomOf="@+id/text_respon" />

    <TextView
        android:id="@+id/value_kondisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/value_kondisi"
        app:layout_constraintBottom_toBottomOf="@+id/text_kondisi"
        app:layout_constraintStart_toEndOf="@+id/text_kondisi" />

</androidx.constraintlayout.widget.ConstraintLayout>