<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ListActionsActivity">

    <TextView
        android:id="@+id/button_CekPernafasan"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_list"
        android:fontFamily="@font/opensansreguler"
        android:gravity="center_vertical"
        android:paddingStart="40dp"
        android:text="@string/btn_cekPernafasan"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/button_CekKesadaran"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_list"
        android:fontFamily="@font/opensansreguler"
        android:gravity="center_vertical"
        android:paddingStart="40dp"
        android:text="@string/btn_cekKesadaran"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button_CekPernafasan"
        tools:layout_editor_absoluteX="5dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/button_CekLuka"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_list"
        android:fontFamily="@font/opensansreguler"
        android:gravity="center_vertical"
        android:paddingStart="40dp"
        android:text="@string/btn_cekLuka"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button_CekKesadaran"
        tools:layout_editor_absoluteX="5dp"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:id="@+id/button_CekTensi"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_list"
        android:fontFamily="@font/opensansreguler"
        android:gravity="center_vertical"
        android:paddingStart="40dp"
        android:text="@string/btn_cekTensi"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button_CekLuka"
        tools:layout_editor_absoluteX="5dp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/button_pasangInfus"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_list"
        android:fontFamily="@font/opensansreguler"
        android:gravity="center_vertical"
        android:paddingStart="40dp"
        android:text="@string/btn_pasangInfus"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button_CekTensi"
        tools:layout_editor_absoluteX="5dp"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>