<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/checkTensi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <TextView
            android:id="@+id/pertama_text"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/opensansreguler"
            android:gravity="center"
            android:text="@string/text_cekTensi"
            android:textColor="@color/red"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputSystole"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_bottom_nofill"
            android:hint="@string/text_systole"
            android:inputType="numberDecimal"
            android:paddingStart="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pertama_text"
            tools:ignore="RtlSymmetry"
            android:autofillHints="120" />

        <EditText
            android:id="@+id/inputDiastole"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_bottom_nofill"
            android:hint="@string/text_diastole"
            android:inputType="numberDecimal"
            android:paddingStart="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputSystole"
            tools:ignore="RtlSymmetry"
            android:autofillHints="80" />

        <TextView
            android:id="@+id/button_submite"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_botton_noedge"
            android:fontFamily="@font/opensansbold"
            android:gravity="center"
            android:text="@string/button_send"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputDiastole" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>